--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,33 +52,18 @@
         app:layout_constraintTop_toBottomOf="@+id/headerText" />
 
     <TextView
-        android:id="@+id/equationTwo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:background="#401B737E"
-        android:padding="7dp"
-        android:text="Второе уравнение"
-        android:textColor="#1B737E"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/equationOne" />
-
-    <TextView
         android:id="@+id/answer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="56dp"
         android:text="Ответ: (округление до целого)"
         android:textColor="#1B737E"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/equationTwo" />
+        app:layout_constraintTop_toBottomOf="@+id/equationOne" />
 
     <TableLayout
         android:id="@+id/tableLayout"
